--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -71,7 +71,7 @@
     </div>
     <div class="offcanvas-body">
         <ng-container *ngFor="let aux of listaMensajes">
-            <div class="card text-center mb-2">
+            <div class=" text-center mb-2">
                 <div class="card-header">
                     Mensaje de <b>{{ aux.usuarioNota }}</b>
                 </div>
