--- a/src/app/pages/quienes-somos/quienes-somos.component.html
+++ b/src/app/pages/quienes-somos/quienes-somos.component.html
@@ -41,24 +41,73 @@
     <div class="swiper-button-next"></div>
   </div>
 </div>
-<div class="container text-center mt-3 mb-4">
+<div class="container text-center mt-4 mb-4">
   <span class="texto_subtitle">Manzana Serrana</span><br>
   <p class="texto_title bold espacios_textos">¿Quíenes</p><br>
   <p class="texto_title bold espacios_textos">somos?</p>
 </div>
-<div class="container-fluid p-0">
-  <div class="container-fluid m-5">
-    <div class="card mb-3" style="max-width: 540px;">
-      <div class="row g-0">
-        <div class="col-md-4">
-          <img src="..." class="img-fluid rounded-start" alt="...">
+<div class="container my-3">
+  <div class="row">
+    <div class="col-12">
+      <div class="mb-3">
+        <div class="row g-5">
+          <div class="col-md-4">
+            <img src="../../../assets/img/quien1.webp" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8 carta_verde">
+            <div class="card-body">
+              <p class="titulo_carta text-center">Productor Nicolas</p>
+              <p class="texto_carta">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            </div>
+          </div>
         </div>
-        <div class="col-md-8">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+    <div class="col-12">
+      <div class="mb-3">
+        <div class="row g-5">
+          <div class="col-md-8 carta_blanca">
+            <div class="card-body">
+              <p class="titulo_carta_blanca text-center">Productor Juan</p>
+              <p class="texto_carta_blanca">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <img src="../../../assets/img/quien2.webp" class="img-fluid rounded-start" alt="...">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-12">
+      <div class="mb-3">
+        <div class="row g-5">
+          <div class="col-md-4">
+            <img src="../../../assets/img/quien1.webp" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8 carta_verde">
+            <div class="card-body">
+              <p class="titulo_carta text-center">Productor Nicolas</p>
+              <p class="texto_carta">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-12">
+      <div class="mb-3">
+        <div class="row g-5">
+          <div class="col-md-8 carta_blanca">
+            <div class="card-body">
+              <p class="titulo_carta_blanca text-center">Productor Juan</p>
+              <p class="texto_carta_blanca">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <img src="../../../assets/img/quien2.webp" class="img-fluid rounded-start" alt="...">
           </div>
         </div>
       </div>
