--- a/src/app/layout/layout-main/layout-main.component.html
+++ b/src/app/layout/layout-main/layout-main.component.html
@@ -1,7 +1,7 @@
 <div  id="wrapper">
     <div id="content-wrapper" class="d-flex flex-column">
         <app-navbar></app-navbar>
-        <div class="">
+        <div class="mb-5">
             <router-outlet></router-outlet>
         </div>
         <app-footer></app-footer>
