--- a/src/app/pages/agregar-actividad/agregar-actividad.component.html
+++ b/src/app/pages/agregar-actividad/agregar-actividad.component.html
@@ -15,11 +15,15 @@
       </div>
     </div>
     <div class="mb-3">
-      <label for="foto" class="texto_card">Imagen del Evento</label>
+      <label for="foto" class="texto_card">Imagen de la Actividad</label>
       <div class="text-center">
-        <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(nombrefoto)" alt="" width="100">
-      </div>
-      <input (change)="onFileSelect($event.target)" type="file" class="form-control texto_input" id="foto">
+        <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(nombrefoto)" alt=""
+            width="50%">
+    </div>
+      <div class="mt-3">
+        <input (change)="onFileSelect($event.target)" type="file" class="form-control texto_input_foto"
+        id="foto">
+    </div>
     </div>
     <div class="form-group">
       <label for="descripcion" class="texto_card">Descripción</label>
