--- a/src/app/pages/agregar-evento/agregar-evento.component.html
+++ b/src/app/pages/agregar-evento/agregar-evento.component.html
@@ -6,7 +6,7 @@
   </div>
   <form [formGroup]="eventoForm" (ngSubmit)="onSubmit()">
     <div class="row mb-3">
-      <div class="col">
+      <div class="col-sm-12 col-md-4">
         <div class="mb-3">
           <label for="nombre" class="form-label texto_card">Nombre</label>
           <input type="text" class="form-control texto_input" id="nombre" formControlName="nombre"
@@ -17,7 +17,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-sm-12 col-md-4">
         <label for="fechaInicio" class="form-label texto_card">Fecha de Inicio</label>
         <input type="date" class="form-control texto_input" id="fechaInicio" formControlName="fechaInicio">
         <div *ngIf="eventoForm.get('fechaInicio')?.hasError('required') && eventoForm.get('fechaInicio')?.touched"
@@ -25,21 +25,23 @@
           Este campo es requerido.
         </div>
       </div>
-      <div class="col">
+      <div class="col-sm-12 col-md-4">
         <label for="fechaFin" class="form-label texto_card">Fecha de Fin</label>
         <input type="date" class="form-control texto_input" id="fechaFin" formControlName="fechaFin">
         <div *ngIf="eventoForm.get('fechaFin')?.hasError('required') && eventoForm.get('fechaFin')?.touched"
-            class="invalid-check">
-            Este campo es requerido.
-          </div>
+          class="invalid-check">
+          Este campo es requerido.
+        </div>
       </div>
     </div>
     <div class="mb-3">
       <label for="foto" class="form-label texto_card">Imagen del Evento</label>
       <div class="text-center">
-        <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(nombrefoto)" alt="" width="100">
+        <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(nombrefoto)" alt="" width="50%">
       </div>
-      <input (change)="onFileSelect($event.target)" type="file" class="form-control texto_input" id="foto">
+      <div class="mt-3">
+        <input (change)="onFileSelect($event.target)" type="file" class="form-control texto_input_foto" id="foto">
+      </div>
     </div>
     <div class="mb-3">
       <div class="mx-auto" id="map" style="width: 100%; height: 300px;"></div>
@@ -48,10 +50,10 @@
       <label for="descripcion" class="form-label texto_card">Descripción</label>
       <textarea class="form-control texto_input" id="descripcion" formControlName="descripcion"
         placeholder="Descripcion"></textarea>
-        <div *ngIf="eventoForm.get('descripcion')?.hasError('required') && eventoForm.get('descripcion')?.touched"
-            class="invalid-check">
-            Este campo es requerido.
-          </div>
+      <div *ngIf="eventoForm.get('descripcion')?.hasError('required') && eventoForm.get('descripcion')?.touched"
+        class="invalid-check">
+        Este campo es requerido.
+      </div>
     </div>
     <button type="submit" class="btn btn-rojo">{{ tituloBoton }}</button>
   </form>
