--- a/src/app/pages/agregar-productor/agregar-productor.component.html
+++ b/src/app/pages/agregar-productor/agregar-productor.component.html
@@ -6,7 +6,7 @@
   </div>
   <form [formGroup]="productorForm" (ngSubmit)="onSubmit()">
     <div class="row">
-      <div class="col">
+      <div class="col-sm-12 col-md-4">
         <div class="mb-3">
           <label for="nombre" class="form-label texto_card">Nombre</label>
           <input type="text" class="form-control texto_input" id="nombre" formControlName="nombre" placeholder="Nombre">
@@ -16,7 +16,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-sm-12 col-md-4">
         <div class="mb-3">
           <label for="apellidoPaterno" class="form-label texto_card">Apellido Paterno</label>
           <input type="text" class="form-control texto_input" id="apellidoPaterno" formControlName="apellidoPaterno"
@@ -28,7 +28,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-sm-12 col-md-4">
         <div class="mb-3">
           <label for="apellidoMaterno" class="form-label texto_card">Apellido Materno</label>
           <input type="text" class="form-control texto_input" id="apellidoMaterno" formControlName="apellidoMaterno"
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col-sm-12 col-md-6">
         <div class="mb-3">
           <label for="correo" class="form-label texto_card">Correo</label>
           <input type="email" class="form-control texto_input" id="correo" formControlName="correo"
@@ -53,7 +53,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-sm-12 col-md-6">
         <div class="mb-3">
           <label for="telefono" class="form-label texto_card">Teléfono</label>
           <input type="tel" class="form-control texto_input" id="telefono" formControlName="telefono"
@@ -66,7 +66,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col-sm-12 col-md-6">
         <div class="mb-3">
           <label for="usuario" class="form-label texto_card">Usuario</label>
           <input type="text" class="form-control texto_input" id="usuario" formControlName="usuario"
@@ -77,7 +77,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-sm-12 col-md-6">
         <div class="mb-3">
           <label for="contrasenia" class="form-label texto_card">Contraseña</label>
           <input type="password" class="form-control texto_input" id="contrasenia" formControlName="contrasenia"
@@ -89,7 +89,7 @@
         </div>
       </div>
     </div>
-    <button type="submit" class="btn btn-rojo">Registrar Usuarios</button>
+    <button type="submit" class="btn btn-rojo">Registrar Usuario</button>
   </form>
 
 </div>
