--- a/src/app/pages/agregar-punto/agregar-punto.component.html
+++ b/src/app/pages/agregar-punto/agregar-punto.component.html
@@ -6,7 +6,7 @@
     </div>
     <form [formGroup]="puntoVentaForm" (ngSubmit)="onSubmit()">
         <div class="row mb-3">
-            <div class="col">
+            <div class="col-sm-12 col-md-4">
                 <div class="mb-3">
                     <label for="nombre" class="form-label texto_card">Nombre</label>
                     <input type="text" class="form-control texto_input" id="nombre" formControlName="nombre"
@@ -17,14 +17,14 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-sm-12 col-md-4 mb-3">
                 <label for="estatus" class="form-label texto_card">Estatus</label>
-                <select class="form-control texto_input" id="estatus" formControlName="estatus">
+                <select class="form-select texto_input" formControlName="estatus" id="estatus">
                     <option value="1">Activo</option>
-                    <option value="2">Inactivo</option>
+                    <option value="2">Desactivado</option>
                 </select>
             </div>
-            <div class="col">
+            <div class="col-sm-12 col-md-4">
                 <label for="horario" class="form-label texto_card">Horario</label>
                 <input type="text" class="form-control texto_input" id="horario" formControlName="horario"
                     placeholder="Horario">
@@ -35,11 +35,15 @@
             </div>
         </div>
         <div class="mb-3">
-            <label for="foto" class="form-label texto_card">Imagen del Evento</label>
+            <label for="foto" class="form-label texto_card">Imagen del Punto</label>
             <div class="text-center">
-                <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(nombrefoto)" alt="" width="100">
+                <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(nombrefoto)" alt=""
+                    width="50%">
             </div>
-            <input (change)="onFileSelect($event.target)" type="file" class="form-control texto_input" id="foto">
+            <div class="mt-3">
+                <input (change)="onFileSelect($event.target)" type="file" class="form-control texto_input_foto"
+                id="foto">
+            </div>
         </div>
         <div class="mb-3">
             <div class="mx-auto" id="map" style="width: 100%; height: 300px;"></div>
