--- a/src/app/pages/eventos/eventos.component.html
+++ b/src/app/pages/eventos/eventos.component.html
@@ -3,65 +3,69 @@
   <p class="texto_title bold espacios_textos">Eventos</p>
 </div>
 <div class="container mt-3">
-  <table class="table table-hover">
-    <thead>
-      <tr class="text-center">
-        <th>#</th>
-        <th>Nombre</th>
-        <th>Imagen</th>
-        <th>Descripcion</th>
-        <th></th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let list of listaEventos">
-        <th class="text-center vertical_align">{{ list.id }}</th>
-        <th class="text-center vertical_align">{{ list.nombre }}</th>
-        <td class="text-center vertical_align">
-          <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(list.foto)" alt="" class="img-table">
-        </td>
-        <td class="text-center vertical_align">{{ list.descripcion }}</td>
-        <td class="text-center vertical_align">
-          <button class="btn btn-rojo" (click)="buscarEvento(list.id, 1, list.nombre)">Actualizar</button>
-        </td>
-        <td class="text-center vertical_align">
-          <button class="btn btn-rojo" data-bs-toggle="modal" (click)="buscarEvento(list.id, 2, list.nombre)" data-bs-target="#eliminarEvento">Eliminar</button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="table-responsive">
+    <table class="table table-hover">
+      <thead>
+        <tr class="text-center">
+          <th>#</th>
+          <th>Nombre</th>
+          <th>Imagen</th>
+          <th>Descripcion</th>
+          <th></th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let list of listaEventos">
+          <th class="text-center vertical_align">{{ list.id }}</th>
+          <th class="text-center vertical_align">{{ list.nombre }}</th>
+          <td class="text-center vertical_align">
+            <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(list.foto)" alt="" class="img-table">
+          </td>
+          <td class="text-center vertical_align">{{ list.descripcion }}</td>
+          <td class="text-center vertical_align">
+            <button class="btn btn-rojo" (click)="buscarEvento(list.id, 1, list.nombre)">Actualizar</button>
+          </td>
+          <td class="text-center vertical_align">
+            <button class="btn btn-rojo" data-bs-toggle="modal" (click)="buscarEvento(list.id, 2, list.nombre)" data-bs-target="#eliminarEvento">Eliminar</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
 <div class="container text-center mt-5 mb-4">
   <p class="texto_title bold espacios_textos">Puntos de Venta</p>
 </div>
 <div class="container mt-3">
-  <table class="table table-hover">
-    <thead>
-      <tr class="text-center">
-        <th>#</th>
-        <th>Nombre</th>
-        <th>Estatus</th>
-        <th>Horario</th>
-        <th></th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let list of listaPuntos">
-        <th class="text-center vertical_align">{{ list.id }}</th>
-        <th class="text-center vertical_align">{{ list.nombre }}</th>
-        <td class="text-center vertical_align">{{ list.estatus }}</td>
-        <td class="text-center vertical_align">{{ list.horario }}</td>
-        <td class="text-center vertical_align">
-          <button class="btn btn-rojo" (click)="buscarPunto(list.id, 1, list.nombre)">Actualizar</button>
-        </td>
-        <td class="text-center vertical_align">
-          <button class="btn btn-rojo" (click)="buscarPunto(list.id, 2, list.nombre)" data-bs-toggle="modal" data-bs-target="#eliminarPunto">Eliminar</button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="table-responsive">
+    <table class="table table-hover">
+      <thead>
+        <tr class="text-center">
+          <th>#</th>
+          <th>Nombre</th>
+          <th>Estatus</th>
+          <th>Horario</th>
+          <th></th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let list of listaPuntos">
+          <th class="text-center vertical_align">{{ list.id }}</th>
+          <th class="text-center vertical_align">{{ list.nombre }}</th>
+          <td class="text-center vertical_align">{{ list.estatus }}</td>
+          <td class="text-center vertical_align">{{ list.horario }}</td>
+          <td class="text-center vertical_align">
+            <button class="btn btn-rojo" (click)="buscarPunto(list.id, 1, list.nombre)">Actualizar</button>
+          </td>
+          <td class="text-center vertical_align">
+            <button class="btn btn-rojo" (click)="buscarPunto(list.id, 2, list.nombre)" data-bs-toggle="modal" data-bs-target="#eliminarPunto">Eliminar</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
 
 <!-- Modal para eliminar evento -->
@@ -73,7 +77,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Estas seguro de eliminar {{ nombreProducto }}
+        ¿Estas seguro de eliminar <b>{{ nombreProducto }}</b>?
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-gris" data-bs-dismiss="modal">Cancelar</button>
@@ -92,7 +96,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Estas seguro de eliminar {{ nombreProducto }}
+        ¿Estas seguro de eliminar <b>{{ nombreProducto }}</b>?
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-gris" data-bs-dismiss="modal">Cancelar</button>
