--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,24 +1,19 @@
 <nav class="fondo_navbar navbar-expand-lg fixed-top">
     <div class="container-fluid p-0 m-2">
-     
       <div class="row">
         <div class="col">
           <div class="text-center cursor_pointer">
-            <img routerLink="/home" src="../../../assets/img/Logo Horizontal.svg" alt="" width="20%" height="100%">
+            <img routerLink="/home" src="../../../assets/img/Logo Horizontal.svg" alt="" width="15%" height="50%">
           </div>
         </div>
       </div>
     </div>
   </nav>
-<div class="container mb-4" style="margin-top: 80px;">
-    <!-- Outer Row -->
-    <div class="row justify-content-center">
-
+<div class="container mb-4 login">
+    <div class="row justify-content-center align-items-center">
         <div class="col-xl-10 col-lg-12 col-md-9">
-
-            <div class="card o-hidden border-0 shadow-lg my-5">
+            <div class="border-0 shadow-lg my-5">
                 <div class="card-body p-0">
-                    <!-- Nested Row within Card Body -->
                     <div class="row">
                         <div class="col-lg-6 d-none d-lg-block"> <img class="img-fluid"
                                 src="../../../assets/img/login.jpg" alt="..."></div>
